; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/can/c_can/extr_c_can_platform.c_c_can_plat_write_reg_aligned_to_32bit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/can/c_can/extr_c_can_platform.c_c_can_plat_write_reg_aligned_to_32bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.c_can_priv = type { i32*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.c_can_priv*, i32, i32)* @c_can_plat_write_reg_aligned_to_32bit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @c_can_plat_write_reg_aligned_to_32bit(%struct.c_can_priv* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.c_can_priv*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.c_can_priv* %0, %struct.c_can_priv** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.c_can_priv*, %struct.c_can_priv** %4, align 8
  %9 = getelementptr inbounds %struct.c_can_priv, %struct.c_can_priv* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = load %struct.c_can_priv*, %struct.c_can_priv** %4, align 8
  %12 = getelementptr inbounds %struct.c_can_priv, %struct.c_can_priv* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = load i32, i32* %5, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = mul nsw i32 2, %17
  %19 = sext i32 %18 to i64
  %20 = add nsw i64 %10, %19
  %21 = call i32 @writew(i32 %7, i64 %20)
  ret void
}

declare dso_local i32 @writew(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
